tests/ui/regions/regions-free-region-ordering-callee-4.stderr
error[E0491]: in type `&'a &'b usize`, reference has a longer lifetime than the data it references
  --> $DIR/regions-free-region-ordering-callee-4.rs:5:68
   |
LL | fn ordering4<'a, 'b, F>(a: &'a usize, b: &'b usize, x: F) where F: FnOnce(&'a &'b usize) {
   |                                                                    ^^^^^^^^^^^^^^^^^^^^^
   |
note: the pointer is valid for the lifetime `'a` as defined here
  --> $DIR/regions-free-region-ordering-callee-4.rs:5:14
   |
LL | fn ordering4<'a, 'b, F>(a: &'a usize, b: &'b usize, x: F) where F: FnOnce(&'a &'b usize) {
   |              ^^
note: but the referenced data is only valid for the lifetime `'b` as defined here
  --> $DIR/regions-free-region-ordering-callee-4.rs:5:18
   |
LL | fn ordering4<'a, 'b, F>(a: &'a usize, b: &'b usize, x: F) where F: FnOnce(&'a &'b usize) {
   |                  ^^

error: lifetime may not live long enough
  --> $DIR/regions-free-region-ordering-callee-4.rs:8:12
   |
LL | fn ordering4<'a, 'b, F>(a: &'a usize, b: &'b usize, x: F) where F: FnOnce(&'a &'b usize) {
   |              --  -- lifetime `'b` defined here
   |              |
   |              lifetime `'a` defined here
...
LL |     let z: Option<&'a &'b usize> = None;
   |            ^^^^^^^^^^^^^^^^^^^^^ requires that `'b` must outlive `'a`
   |
   = help: consider adding the following bound: `'b: 'a`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0491`.
